[package]
name = "oksip"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "a sip stack"
repository = "https://github.com/bean-du/oksip"
documentation = "https://github.com/bean-du/oksip"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
